Optimized code for better reliability